# freebsd-m4-for-windows

./: CMakeLists.txt  README.md
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  config.h.in
m4_freebsd/: gnum4.c  main.c  misc.c  trace.c
m4_freebsd_tests/: CMakeLists.txt
m4_freebsd_win/: CMakeLists.txt  eval.c  extern.h  gnum4.c  look.c
m4_freebsd_win_tests/: CMakeLists.txt
ohash/: CMakeLists.txt  ohash.h
strtonum/: CMakeLists.txt  strtonum.c  strtonum.h
